fix: restore visible swipe delete icons

--- a/src/app/pages/sentences-list/sentences-list.page.scss
+++ b/src/app/pages/sentences-list/sentences-list.page.scss
@@ -68,3 +68,11 @@
 .date-note {
   font-size: 0.72rem;
 }
+
+ion-item-option.swipe-option {
+  --color: #fff;
+}
+
+ion-item-option.swipe-option ion-icon {
+  font-size: 1.4rem;
+}
